capstone/04-gateway-api-nginx-gateway-fabric/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"gateway.networking.k8s.io/v1","kind":"Gateway","metadata":{"annotations":{},"name":"public-gateway","namespace":"platform-gateway"},"spec":{"gatewayClassName":"nginx","listeners":[{"name":"http","port":80,"protocol":"HTTP"}]}}
  creationTimestamp: "2026-06-16T14:04:59Z"
  generation: 1
  name: public-gateway
  namespace: platform-gateway
  resourceVersion: "96837"
  uid: 65561fcf-ebae-4550-a077-bdadbea87589
spec:
  gatewayClassName: nginx
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
status:
  addresses:
  - type: IPAddress
    value: 20.205.145.41
  conditions:
  - lastTransitionTime: "2026-06-16T15:15:39Z"
    message: The Gateway is accepted
    observedGeneration: 1
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-06-16T15:15:39Z"
    message: The Gateway is programmed
    observedGeneration: 1
    reason: Programmed
    status: "True"
    type: Programmed
  listeners:
  - attachedRoutes: 0
    conditions:
    - lastTransitionTime: "2026-06-16T15:15:39Z"
      message: The Listener is programmed
      observedGeneration: 1
      reason: Programmed
      status: "True"
      type: Programmed
    - lastTransitionTime: "2026-06-16T15:15:39Z"
      message: The Listener is accepted
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-06-16T15:15:39Z"
      message: All references are resolved
      observedGeneration: 1
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-06-16T15:15:39Z"
      message: No conflicts
      observedGeneration: 1
      reason: NoConflicts
      status: "False"
      type: Conflicted
    name: http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
